--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="col-md-4 wow fadeInUp">
             <div class="about-col">
               <div class="img">
-                <img src="./img/mision.jfif" alt="" class="img-fluid">
+                <img src="./img/El perrito del codsito.jfif" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Mision</a></h2>
@@ -199,7 +199,7 @@
           <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
             <div class="about-col">
               <div class="img">
-                <img src="./img/vision.jpg" alt="" class="img-fluid">
+                <img src="./img/30 Dogs Who Are Ready To Go To Comic-Con [PICTURES] - DogTime.jfif" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Plan</a></h2>
