--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="./img/somos.png" class="img-fluid" alt="">
-                <a href="./img/somos.png" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="./img/Screenshot_15.png" class="img-fluid" alt="">
+                <a href="./img/Screenshot_15.png" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
@@ -484,13 +484,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="./img/gabriel.png" class="img-fluid" alt="">
-                <a href="./img/gabriel.png" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="./img/Screenshot_14.png" class="img-fluid" alt="">
+                <a href="./img/Screenshot_14.png" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">pg Gabo</a></h4>
+                <h4><a href="#">Landing Page</a></h4>
                 <p>proyecto</p>
               </div>
             </div>
@@ -529,13 +529,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="./img/gabo2.png" class="img-fluid" alt="">
-                <a href="./img/gabo2.png" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="./img/PAGINA.png" class="img-fluid" alt="">
+                <a href="./img/PAGINA.png" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">Garcia pg</a></h4>
+                <h4><a href="#">Landing Page</a></h4>
                 <p>proyecto</p>
               </div>
             </div>
@@ -614,7 +614,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Direccion</h3>
-              <address>carr 1A Bar 10/3 sanfrancisco</address>
+              <address>carr 11b - 16 / Altos de Garupal</address>
             </div>
           </div>
 
@@ -692,8 +692,8 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contacto</h4>
             <p>
-              Carrera 1A Barrio 10/3 <br>
-              Albania la Guajira<br>
+                <br>
+               Valledupar Cesar<br>
               Colombia <br>
               <strong>telefono:</strong> +57 3226682522<br>
               <strong>Email:</strong> murgasortega@gmail.com<br>
